--- a/index.html
+++ b/index.html
@@ -32,6 +32,29 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias praesentium placeat mollitia, quod fugiat ad laudantiu, tempore nihil. <br>java css everything is possible here we are here . don't worry</p>
             <a href="" class="hero-btn">Visit Us To Know More</a>
         </div>
+        <div class="chatbox">
+            <div class="chatbox__support">
+                <div class="chatbox__header">
+                    <div class="chatbox__image--header">
+                        <img src="image.png" alt="image">
+                    </div>
+                    <div class="chatbox__content--header">
+                        <h4 class="chatbox__heading--header">Chat support</h4>
+                        <p class="chatbox__description--header">Hi. My name is Sam. How can I help you?</p>
+                    </div>
+                </div>
+                <div class="chatbox__messages">
+                    <div></div>
+                </div>
+                <div class="chatbox__footer">
+                    <input type="text" placeholder="Write a message...">
+                    <button class="chatbox__send--footer send__button">Send</button>
+                </div>
+            </div>
+            <div class="chatbox__button">
+                <button><img src="./images/chatbox-icon.svg" /></button>
+            </div>
+        </div>
     </section>
     <!------------Job We Offer----------->
     <section class="offer" id="Offer">
@@ -160,34 +183,52 @@
 
 
 <!------------------------------- About us -------------------------->
-<section class="offer" id="About">
+<section class="team" id="About">
     <h1>Our Team</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam architecto ad nobis?</p>
 
-    <div class="row">
-        <div class="offer-col">
+    <div class="role">
+        <div class="offer-colmn">
             <div class="team_img">
                 <img src="team-1.png" alt="Team_member_image">
             </div>
             <h3>Arghya Banarjee</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus id quis maxime pariatur consequuntur ad eligendi. Saepe nulla, facilis cupiditate deleniti accusamus rem odio recusandae voluptatibus quas officia libero ex Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
             <h4>FOUNDER / CEO</h4>
+            <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+    </div>
         </div>
-        <div class="offer-col">
+        <div class="offer-colmn">
             <div class="team_img">
                 <img src="team-2.png" alt="Team_member_image">
             </div>
             <h3>Arnab Manna</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus id quis maxime pariatur consequuntur ad eligendi. Saepe nulla, facilis cupiditate deleniti accusamus rem odio recusandae voluptatibus quas officia libero ex Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
-            <h4>TECHNICAL OFFICER</h4>
+            <h4>Managing Director</h4>
+            <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+    </div>
         </div>
-        <div class="offer-col">
+        <div class="offer-colmn">
             <div class="team_img">
                 <img src="team-3.png" alt="Team_member_image">
             </div>
             <h3>Gaurav Biswas</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus id quis maxime pariatur consequuntur ad eligendi. Saepe nulla, facilis cupiditate deleniti accusamus rem odio recusandae voluptatibus quas officia libero ex Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
             <H4>A ENGINEER</H4>
+            <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-linkedin"></i>
+    </div>
         </div>
         </div>
     </div>
@@ -264,5 +305,6 @@
             navLinks.style.right="-200px"
         }
     </script>
+    <script src="app.js"></script>
 </body>
 </html>
