--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="text-box">
             <h1>Best Job Opportunity Website</h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias praesentium placeat mollitia, quod fugiat ad laudantiu, tempore nihil. <br>java css everything is possible here we are here . don't worry</p>
-            <a href="" class="hero-btn">Visit Us To Know More</a>
+            <a href="project_1.html" class="hero-btn">Login Here</a>
         </div>
         <div class="chatbox">
             <div class="chatbox__support">
