--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <li>SEO AUDITS</li>
                         </ul>
                     </div>
-                    <button type="button" class="price-btn">Get Started</button>
+                    <a href="payment.html" class="price-btn">Get Started</a>
                 </div>
             </div>
             <div class="basic-price-info">
@@ -133,7 +133,7 @@
                             <li>SEO AUDITS</li>
                         </ul>
                     </div>
-                    <button type="button" class="price-btn">Get Started</button>
+                    <a href="payment.html" class="price-btn">Get Started</a>
                 </div>
             </div>
             <div class="basic-price-info">
@@ -148,7 +148,7 @@
                             <li>SEO AUDITS</li>
                         </ul>
                     </div>
-                    <button type="button" class="price-btn">Get Started</button>
+                    <a href="payment.html" class="price-btn">Get Started</a>
                 </div>
             </div>
         </div>
